--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,5 +1,98 @@
+:root{
+    --colorFirst: #7A45C0;
+    --colorSecond: #f63a07;
+}
+
+
 *{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+}
+body,#root{
+    width: 100%;
+    min-height: 100vh;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+}
+.wrapper{
+    max-width: 1100px;
+}
+main{
+    min-height: 70vh;
+}
+footer{
+    margin-top: auto;
+    background-color: rgb(28, 28, 28);
+    min-height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer p{
+    color: rgb(95, 95, 95);
+}
+
+
+
+
+
+.carousel-item,
+.carousel-inner {
+    position: static;
+}
+
+.carousel-item-next,
+.carousel-item-prev,
+.carousel-item.active {
+    display: flex;
+    align-items: center;
+    max-height: 50vh;
+
+}
+
+.caruselItemMe img {
+    position: relative;
+    width: 100%;
+}
+
+
+
+
+
+
+@media (max-width: 425px){
+    h1{
+        font-size: 22px;
+    }
+    h2{
+        font-size: 18px;
+    }
+    h3{
+        font-size: 16px;
+    }
+    h4{
+        font-size: 14px;
+    }
+    h5{
+        font-size: 12px;
+    }
+    h6{
+        font-size: 12px;
+    }
+    p{
+        font-size: 12px;
+    }
+    a{
+        font-size: 14px;
+    }
+    .navbar-collapse{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .me-auto{
+        margin-right: 0;
+    }
 }
